# ASSD-TP4

./: .gitignore  ASSD - TP4 - presentación entrega 2.pptx  README.md  main.py  requirements  requirements_no_conda  requirements_pip  sound3d_workspace.code-workspace
3DTIMobile/: 3DTIMobile.sln
3DTIMobile/3DTIMobile/3DTIMobile.Android/: 3DTIMobile.Android.cpp  3DTIMobile.Android.vcxproj  3DTIMobile.Android.vcxproj.filters
3DTIMobile/3DTIMobile/3DTIMobile.Shared/: 3DTIMobile.Shared.vcxitems  _3DTIMobile.cpp  _3DTIMobile.h
3DTIMobile/3DTIMobile/3DTIMobile.iOS/: 3DTIMobile.iOS.cpp  3DTIMobile.iOS.vcxproj
3DTIMobile/ARM/Release/: lib_3DTIMobile.so.recipe
3RTI_test/: 3DTI_AudioToolkit.vcxproj  3DTI_AudioToolkit.vcxproj.filters  3DTI_ResourceManager.vcxproj  BasicSpatialisationRTAudio.vcxproj  BasicSpatialisationRTAudio.vcxproj.filters  rtaudio.vcxproj
3d_processing_api/HRIRs_interpreter/: HRIRs_interpreter.py
3d_processing_api/audio_processing/: convolutioner.py  pyaudio_test0.py  pyo_test0.py
Resources/SOFA_Databases/ARI/: hrtf_nh103.sofa  hrtf_nh11.sofa  hrtf_nh122.sofa  hrtf_nh130.sofa  hrtf_nh133.sofa  hrtf_nh135.sofa  hrtf_nh138.sofa  hrtf_nh140.sofa  hrtf_nh154.sofa  hrtf_nh16.sofa  hrtf_nh162.sofa  hrtf_nh18.sofa  hrtf_nh19.sofa  hrtf_nh34.sofa  hrtf_nh36.sofa  hrtf_nh38.sofa  hrtf_nh41.sofa  hrtf_nh42.sofa  hrtf_nh46.sofa  hrtf_nh5.sofa  hrtf_nh52.sofa  hrtf_nh54.sofa  hrtf_nh55.sofa  hrtf_nh60.sofa  hrtf_nh62.sofa  hrtf_nh70.sofa  hrtf_nh71.sofa  hrtf_nh72.sofa  hrtf_nh89.sofa  hrtf_nh91.sofa  hrtf_nh92.sofa
Resources/SOFA_Databases/ARI/HRIRs/: hrtf_nh10.sofa  hrtf_nh102.sofa  hrtf_nh104.sofa  hrtf_nh110.sofa  hrtf_nh111.sofa  hrtf_nh115.sofa  hrtf_nh12.sofa  hrtf_nh120.sofa  hrtf_nh123.sofa  hrtf_nh128.sofa  hrtf_nh129.sofa  hrtf_nh13.sofa  hrtf_nh131.sofa  hrtf_nh132.sofa  hrtf_nh134.sofa  hrtf_nh136.sofa  hrtf_nh137.sofa  hrtf_nh139.sofa  (+47 more)
ffi_google_oboe/: .gitignore  README.md  pubspec.yaml
ffi_google_oboe/android/: .project  CMakeLists.txt  build.gradle  settings.gradle
ffi_google_oboe/android/gradle/wrapper/: gradle-wrapper.properties
ffi_google_oboe/android/src/main/: AndroidManifest.xml
ffi_google_oboe/android/src/main/cpp/: DSPAudioEngine.cpp  DSPAudioEngine.h  DSPCallback.cpp  DSPCallback.h  OboeFfiCallback.h  OboeFfiStream.cpp  OboeFfiStream.h  ffiOboeExport.cpp  native-lib.cpp
ffi_google_oboe/android/src/main/cpp/SDL/src/core/android/: SDL_android.c
ffi_google_oboe/android/src/main/cpp/SDL/src/cpuinfo/: SDL_cpuinfo.c
ffi_google_oboe/android/src/main/cpp/audio/: AAssetDataSource.cpp  AAssetDataSource.h  BufferMediaDataSource.cpp  BufferMediaDataSource.h  NDKExtractor.cpp  NDKExtractor.h  Player.h
ffi_google_oboe/android/src/main/cpp/audio_original/: AAssetDataSource.cpp  AAssetDataSource.h  DataSource.h  NDKExtractor.h  Player.h
ffi_google_oboe/android/src/main/cpp/utils/: UtilityFunctions.cpp  logging.h
ffi_google_oboe/android/src/main/kotlin/g1_assd_2020/ffi_google_oboe/: FfiGoogleOboePlugin.kt
ffi_google_oboe/example/: README.md  pubspec.yaml
ffi_google_oboe/example/lib/: main.dart
ffi_google_oboe/example/test/: widget_test.dart
ffi_google_oboe/ios/: ffi_google_oboe.podspec
ffi_google_oboe/ios/Classes/: FfiGoogleOboePlugin.h  FfiGoogleOboePlugin.m  SwiftFfiGoogleOboePlugin.swift
ffi_google_oboe/lib/: ffi_google_oboe.dart
ffi_google_oboe/test/: ffi_google_oboe_test.dart
ffi_toolkit_3DTI/: README.md  pubspec.yaml
ffi_toolkit_3DTI/android/: build.gradle  settings.gradle
ffi_toolkit_3DTI/example/: README.md  pubspec.yaml
ffi_toolkit_3DTI/example/lib/: main.dart
ffi_toolkit_3DTI/example/test/: widget_test.dart
ffi_toolkit_3DTI/ios/: ffi_toolkit_3DTI.podspec
ffi_toolkit_3DTI/ios/Classes/: FfiToolkit3DTIPlugin.h  FfiToolkit3DTIPlugin.m  SwiftFfiToolkit3DTIPlugin.swift
ffi_toolkit_3DTI/lib/: ffi_toolkit_3DTI.dart
ffi_toolkit_3DTI/test/: ffi_toolkit_3DTI_test.dart
processing_api_3D/: test_block_surround_br.py  test_moving_ARI.py  test_moving_br.py  test_pytest.py  test_run_first.py
processing_api_3D/HRIRs_interpreter/: HRIRs_interpreter.py  pickle_generator.py
processing_api_3D/audio_processing/: convolutioner.py  pyaudio_test0.py  pyaudio_test1.py  pyaudio_test2.py  pyaudio_test3.py  pyo_ex_convolution.py
sound3d/: README.md  pubspec.yaml
sound3d/android/app/: build.gradle
sound3d/ios/Flutter/: AppFrameworkInfo.plist
sound3d/ios/Runner/: Info.plist
sound3d/ios/Runner.xcodeproj/: project.pbxproj
sound3d/lib/: main.dart
sound3d/test/: widget_test.dart
sound3d_1/: .packages  README.md  pubspec.yaml
sound3d_1/.dart_tool/: package_config.json
sound3d_1/android/: build.gradle  local.properties
sound3d_1/android/app/: build.gradle
sound3d_1/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
sound3d_1/ios/Runner/: Info.plist
sound3d_1/ios/Runner.xcodeproj/: project.pbxproj
sound3d_1/test/: widget_test.dart
turn_arround/: README.md  pubspec.yaml
turn_arround/android/app/: build.gradle
turn_arround/ios/Runner/: Info.plist
turn_arround/ios/Runner.xcodeproj/: project.pbxproj
turn_arround/lib/: 3DTI.dart  main.dart
turn_arround/test/: widget_test.dart
(+241 files in other folders)
